commit: use @Slf4j

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.7</version>
         </dependency>
+        
+        <!-- Lombok for @Slf4j annotation -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
